js signup/login

--- a/inscription.html
+++ b/inscription.html
@@ -26,7 +26,7 @@
     <main>
         <form>
             <h3>Inscrivez-vous</h3>
-
+            <p class="error"></p>
             <label for="username">Nom d'utilisateur</label>
             <input type="text" placeholder="Nom d'utilisateur" id="username">
 
@@ -35,14 +35,14 @@
 
             <label for="re-password">Retaper le mot de passe</label>
             <input type="password" placeholder="Retaper le mot de passe" id="re-password">
-            <button class="button">S'inscrire</button>
+            <button id="signup" class="button">S'inscrire</button>
             <a class="button" href="index.html">Se connecter</a>
         </form>
     </main>
     <footer>
         <p>Copyright © 2021 K.Komala</p>
     </footer>
-    <script src="js/main.js"></script>
+    <script src="js/inscription.js"></script>
 </body>
 
 </html>
