--- a/main-page.html
+++ b/main-page.html
@@ -39,27 +39,32 @@
             <!-- <caption>
                 
             </caption> -->
-            <tr>
-                <th scope="col">Désignation</th>
-                <th scope="col">Date</th>
-                <th scope="col">Nom</th>
-                <th scope="col">Etat</th>
-                <th scope="col"></th>
-            </tr>
-            <tr>
-                <td>titre du bug</td>
-                <td>15/54/1544</td>
-                <td>nom d'utilisateur</td>
-                <td>
-                    <select name="etat" id="etat">
+            <thead>
+                <tr>
+                    <th scope="col">Désignation</th>
+                    <th scope="col">Date</th>
+                    <th scope="col">Nom</th>
+                    <th scope="col">Etat</th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>titre du bug</td>
+                    <td>15/54/1544</td>
+                    <td>nom d'utilisateur</td>
+                    <td>
+                        <select name="etat" id="etat">
                     <option value="">etat</option>
                     <option value="dog">Dog</option>
                     <option value="cat">Cat</option>
                     </select>
-                </td>
-                <td><button class="button">Suprimer</button></td>
+                    </td>
+                    <td><button class="button">Suprimer</button></td>
 
-            </tr>
+                </tr>
+            </tbody>
+
 
         </table>
     </main>
