--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     <main>
         <form>
             <h3>Connectez-vous</h3>
-
+            <p class="error"></p>
             <label for="username">Nom d'utilisateur</label>
             <input type="text" placeholder="Nom d'utilisateur" id="username">
 
             <label for="password">Mot de passe</label>
             <input type="password" placeholder="Mot de passe" id="password">
 
-            <button class="button">Se connecter</button>
+            <button id="connection" class="button">Se connecter</button>
             <a class="button" href="inscription.html">S'inscrire</a>
         </form>
     </main>
