--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <form>
             <h3>Connectez-vous</h3>
-            <p class="error"></p>
+            <ul class="error"></ul>
             <label for="username">Nom d'utilisateur</label>
             <input type="text" placeholder="Nom d'utilisateur" id="username">
 
