--- a/add-bug.html
+++ b/add-bug.html
@@ -22,11 +22,12 @@
 <body id="add-bug">
     <header>
         <h1>Bug tracker</h1>
-        <menu>
-            <a class="button" href="main-page.html">Liste des bugs</a>
-            <li class="button">A traiter</li>
-            <li id="save" class="button">sauvegarder</li>
-        </menu>
+        <nav class="navMenu">
+            <a href="main-page.html"  class="nav">Liste des bugs</a>
+            <a href="main-page.html" class="nav my-bugs">Mes bugs</a>
+            <li id="save" class="nav">Sauvegarder</li>
+            <li class="nav logout">Déconnexion</li>
+        </nav>
     </header>
     <main>
 
